--- a/css/layout.css
+++ b/css/layout.css
@@ -179,7 +179,7 @@ ul#nav li.active a { color: #6108DD; }
 /* ================================================================== */
 
 #intro {
-   background: #111 url(../images/intro-bg.jpg) no-repeat center;
+   background: #111 url(http://res.cloudinary.com/ceasarspalace/image/upload/v1501200123/intro-bg_lel2ig.jpg) no-repeat center;
    overflow: hidden;
 }
 
@@ -265,7 +265,7 @@ ul#nav li.active a { color: #6108DD; }
 /* ================================================================== */
 
 #services {
-   background: #1b1e21 url(../images/patterns/servicesbg.png);
+   background: #1b1e21 url(http://res.cloudinary.com/ceasarspalace/image/upload/v1501200120/servicesbg_t4ynrb.png);
    padding-top: 156px;
    padding-bottom: 120px;
    color: #4E565F;
@@ -304,7 +304,7 @@ ul#nav li.active a { color: #6108DD; }
 /* ================================================================== */
 
 #portfolio {
-   background: #f5f5f5 url(../images/patterns/grey.png);
+   background: #f5f5f5 url(http://res.cloudinary.com/ceasarspalace/image/upload/v1501200121/grey_uuz1qp.png);
    padding-top: 156px;
    padding-bottom: 120px;
 }
